# datafusion-fuzzer

./: .gitignore  Cargo.toml  README.md  datafusion-fuzzer.toml  datafuzzer.toml
.cursor/rules/: system-prompt.mdc
.github/workflows/: test.yml
docs/: ERROR_WHITELIST.md
examples/: error_whitelist_example.rs  no_crash_oracle_example.rs  oracle_usage.rs
src/: lib.rs  main.rs  rng.rs
src/cli/: config.rs  error_whitelist.rs  mod.rs  runner.rs  tui.rs
src/common/: mod.rs  rng.rs  util.rs  value_generator.rs
src/datasource_generator/: dataset_generator.rs  mod.rs  schema.rs
src/fuzz_context/: ctx_observability.rs  mod.rs  runner_config.rs
src/fuzz_runner/: mod.rs
src/oracle/: README.md  mod.rs  oracle_common.rs  oracle_impl_nested_queries.rs  oracle_impl_no_crash.rs  oracle_impl_tlp_having.rs  oracle_impl_tlp_where.rs  oracle_trait.rs  test_helpers.rs  tlp_shared.rs
src/query_generator/: expr_def.rs  expr_gen.rs  expr_impl.rs  expr_literal_gen.rs  mod.rs  stmt_select_def.rs  stmt_select_gen.rs  stmt_select_join.rs
src/table_generator/: dataset_generator.rs  schema.rs
tests/: integration_test.rs
